<resources>
    <string name="app_name">My Application</string>
    <string name="login"> Login here </string>
    <string name="ask">Already have an account?</string>
    <string name="email"> Email</string>
    <string name="remember_me">Remember me</string>
    <string name="register">Register</string>
    <string name="password"> Password</string>
    <string name="full_name"> Full name</string>
    <string name="phoneNumber"> Phone number</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
</resources>
